--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myfirstapp">
-    <!-- PERMISSIONS -->
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,24 +12,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EditBewoners"></activity>
         <activity
             android:name=".bierPopup"
-            android:parentActivityName=".Bierlijst"></activity>
+            android:parentActivityName=".Bierlijst"
+            android:windowSoftInputMode="stateHidden" />
+
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value=".Bierlijst"></meta-data>
+            android:value=".Bierlijst" />
 
         <activity
             android:name=".Statistieken"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
 
-            <meta-data
-                android:name="android.support.PARENT_ACTIVTY"
-                android:value=".MainActivity"></meta-data>
+        <meta-data
+            android:name="android.support.PARENT_ACTIVTY"
+            android:value=".MainActivity" />
+
         <activity
             android:name=".Bierlijst"
-            android:windowSoftInputMode="stateHidden"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
@@ -41,8 +48,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
