Made the app a bit prettier

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myfirstapp">
+    package="com.example.myfirstapp"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -8,44 +11,37 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MorgenMisschien"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditBewoners"></activity>
         <activity
-            android:name=".bierPopup"
-            android:parentActivityName=".Bierlijst"
-            android:windowSoftInputMode="stateHidden" />
-
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".Bierlijst" />
-
-        <activity
-            android:name=".Statistieken"
-            android:parentActivityName=".MainActivity" />
-
-        <meta-data
-            android:name="android.support.PARENT_ACTIVTY"
-            android:value=".MainActivity" />
-
-        <activity
-            android:name=".Bierlijst"
-            android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateHidden">
-
-            <!-- The meta-data tag is required if you support API level 15 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity android:name=".MainActivity">
+            android:name="com.example.myfirstapp.MainActivity"
+            android:label="MorgenMisschien" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".bierPopup"
+            android:parentActivityName=".Bierlijst"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+            android:name=".Statistieken"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".Bierlijst"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity
+            android:name=".EditBewoners"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
