--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -14,18 +13,26 @@
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LeukeStatistieken"></activity>
+        <activity
+            android:name=".add_and_edit_bewoners"
+            android:exported="false"
+            android:label="Huisgenoten bewerken en toevoegen"
+            android:theme="@style/Theme.AppCompat" />
+        <activity android:name=".LeukeStatistieken" />
         <activity
             android:name=".StatistiekenKeuze"
-            android:label="@string/title_activity_statistieken_keuze"></activity>
+            android:parentActivityName=".MainActivity"
+            android:label="Statistieken" />
         <activity
             android:name=".adminPage"
+            android:parentActivityName=".Statistieken"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_admin_page"
             android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".MainActivity"
-            android:label="MorgenMisschien">
+            android:label="MorgenMisschien"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,6 +54,7 @@
             android:name=".EditBewoners"
             android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="stateHidden" />
+
     </application>
 
 </manifest>
