Design verbeterd, meer iconen en kleurtjes enzo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="MorgenMisschien"
-        android:roundIcon="@drawable/ic_launcher_round"
+        android:icon="@drawable/logomm_org_transparent"
+        android:label="Morgen Misschien"
+        android:roundIcon="@drawable/logomm_org_transparent"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
